Working on windows installation